[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "runtime-guard"
version = "0.2.0"
description = "Attribution-aware resource-pressure monitor for any Python project."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["memory", "resource", "monitoring", "diagnostics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Monitoring",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff", "bandit"]

[project.scripts]
runtime-guard = "runtime_guard:_cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
